# lgview-ng

./: .woodpecker.yml  Cargo.toml  INSTALL.md  README.md  config.toml
.github/workflows/: release.yml
src/: config.rs  main.rs
