[package]
name = "lgview-ng"
version = "1.1.0"
edition = "2024"
authors = ["Gondim <gondimcodes@gmail.com>"]
description = "Check for BGP prefix leaks in DDoS mitigation setups using the RIPEstat BGP state API"
repository = "https://github.com/gondimcodes/lgview-ng"
license = "GPL-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
chrono = "0.4"

