[package]
name = "lgview-ng"
version = "1.4.2"
edition = "2024"
authors = ["Gondim <gondimcodes@gmail.com>"]
description = "Check for BGP prefix leaks in DDoS mitigation setups using real-time Telnet Looking Glass servers"
repository = "https://github.com/gondimcodes/lgview-ng"
license = "GPL-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
telnet = "0.2"
regex = "1"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }

